# ParkingSystem

./: .clang-format  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/ParkingSystem/: sample_library.hpp
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt  main.cpp
src/BusinessLogic/: CMakeLists.txt
src/BusinessLogic/AccountService/: CMakeLists.txt
src/BusinessLogic/AccountService/Private/: AccountServiceImpl.cpp  AccountServiceImpl.h  Factory.cpp
src/BusinessLogic/AccountService/Public/: Errors.h  Factory.h  Interface.h  InterfaceWithObserver.h
src/BusinessLogic/AccountService/Tests/: Test.cpp
src/BusinessLogic/BarrierController/: CMakeLists.txt
src/BusinessLogic/BarrierController/Private/: BarrierControllerBase.cpp  BarrierControllerBase.h  Factory.cpp  InputBarrierController.cpp  InputBarrierController.h  OutputBarrierController.cpp  OutputBarrierController.h
src/BusinessLogic/BarrierController/Public/: Factory.h  Interface.h  RequestProvider.h
src/BusinessLogic/EntryExitController/: CMakeLists.txt
src/BusinessLogic/EntryExitController/Private/: EntryExitControllerImpl.cpp  EntryExitControllerImpl.h  Factory.cpp  VehicleServiceCategoryHelpers.h
src/BusinessLogic/EntryExitController/Public/: Factory.h  Interface.h  Observer.h
src/BusinessLogic/ParkingSpaceManager/: CMakeLists.txt
src/BusinessLogic/ParkingSpaceManager/Private/: Factory.cpp  ParkingSpaceManagerImpl.cpp  ParkingSpaceManagerImpl.h
src/BusinessLogic/ParkingSpaceManager/Public/: Errors.h  Factory.h  Interface.h  InterfaceWithObserver.h
src/BusinessLogic/ParkingSpaceManager/Tests/: Test.cpp
src/BusinessLogic/PriceCalculator/: CMakeLists.txt
src/BusinessLogic/PriceCalculator/Private/: Factory.cpp  PriceCalculatorImpl.cpp  PriceCalculatorImpl.h  Rates.cpp  Rates.h
src/BusinessLogic/PriceCalculator/Public/: Factory.h  Interface.h
src/BusinessLogic/PriceCalculator/Tests/: Test.cpp
src/Common/: CompositeInterface.h  Concepts.h  Error.h  Result.h
src/Domain/: CarInfo.h  EntryExit.h  Money.h  ParkingReleasing.h  ParkingReservation.h  ParkingSpaceInfo.h  PaymentTicket.h  Time.h  Vehicle.h
src/Hardware/: CmakeLists.txt  Facade.cpp  Facade.h
src/ftxui_sample/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
(+32 files in other folders)
